--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         function CabinScorer() {
           const criteria = [
-            "Distance from Home", "Lake", "Lake Depth", "Frontage", "Beach", "Lake Bottom",
+            "Distance from Home", "Lake Depth", "Frontage", "Beach", "Lake Bottom",
             "Swimming Depth", "Dock Condition", "Dock/Lift Included", "Backyard Slope",
             "Cabin Condition", "Bedrooms", "Bathrooms", "Kitchen", "Living Area", "Loft",
             "Fireplace", "Seasonal/Year Round", "Washer and Dryer", "Garage", "Outdoor Storage", "Backlot", "Lot size",
@@ -31,12 +31,12 @@
           ];
 
           const weights = {
-            "Distance from Home": 2, "Lake": 2, "Beach": 2, "Swimming Depth": 2,
+            "Distance from Home": 2, "Lake Depth": 2, "Beach": 2, "Swimming Depth": 2,
             "Cabin Condition": 2, "Garage": 2, "Backlot": 2
           };
 
           const guidelines = {
-            "Distance from Home": "60 Mins +1, Under 60 Mins +2", "Lake": "Desirability", "Lake Depth": "25' Min +1, 30' +2",
+            "Distance from Home": "60 Mins +1, Under 60 Mins +2", "Lake Depth": "25' Min +1, 30' +2",
             "Frontage": "50' +1", "Beach": "Sand +2", "Lake Bottom": "Hard +2",
             "Swimming Depth": "3' at Dock +1, Deeper +2", "Dock/Lift Included": " Dock +1, Lift +2", 
             "Backyard Slope": "Moderate +1, Gentle +2",
