--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             criteria.forEach(c => { scores[c] = 0; });
             setCabins([{ 
               id: Date.now(), 
-              name: 'Cabin ' + (cabins.length + 1), 
+              name: 'Address', 
               number: '', 
               price: '', 
               scores 
@@ -217,11 +217,11 @@
                                       onKeyDown={(e) => e.key === 'Enter' && setEditingName(null)} 
                                       autoFocus 
                                       onClick={(e) => e.stopPropagation()} 
-                                      className="text-2xl font-bold text-slate-800 bg-white rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-teal-500 w-full mb-2" 
+                                      className="text-xl font-semibold text-slate-800 bg-white rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-teal-500 w-full mb-2" 
                                     />
                                   ) : (
                                     <div 
-                                      className="text-2xl font-bold flex items-center gap-2 hover:text-teal-100 mb-2" 
+                                      className="text-xl font-semibold flex items-center gap-2 hover:text-teal-100 mb-2" 
                                       onClick={(e) => { e.stopPropagation(); setEditingName(cabin.id); }}
                                     >
                                       {cabin.name}
@@ -245,7 +245,7 @@
                                         className="text-xl font-semibold flex items-center gap-2 hover:text-teal-100 flex-1" 
                                         onClick={(e) => { e.stopPropagation(); setEditingNumber(cabin.id); }}
                                       >
-                                        {cabin.number || 'Number'}
+                                        {cabin.number || 'Lake'}
                                         <i data-lucide="edit-2" className="w-4 h-4 opacity-60"></i>
                                       </div>
                                     )}
@@ -356,29 +356,4 @@
 
                 <div className="mt-8 bg-white/80 rounded-2xl shadow-lg p-6 border border-teal-100">
                   <h3 className="text-xl font-bold text-slate-800 mb-4 text-center">Backup Your Data</h3>
-                  <div className="flex gap-4 max-w-md mx-auto">
-                    <button onClick={exportData} className="flex-1 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 font-bold flex items-center justify-center gap-2">
-                      <i data-lucide="download" className="w-5 h-5"></i>
-                      Export Data
-                    </button>
-                    <label className="flex-1 py-3 bg-green-600 text-white rounded-lg hover:bg-green-700 font-bold flex items-center justify-center gap-2 cursor-pointer">
-                      <i data-lucide="upload" className="w-5 h-5"></i>
-                      Import Data
-                      <input type="file" accept=".json" onChange={importData} className="hidden" />
-                    </label>
-                  </div>
-                  <p className="text-xs text-slate-600 text-center mt-3">Export to save a backup. Import to restore your cabins.</p>
-                </div>
-
-              </div>
-            </div>
-          );
-        }
-
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<CabinScorer />);
-        
-        setTimeout(() => { lucide.createIcons(); }, 100);
-    </script>
-</body>
-</html>
+                  <div className="flex gap-4 max-w-md m
