--- a/index.html
+++ b/index.html
@@ -189,9 +189,8 @@
           return (
             <div className="min-h-screen bg-gradient-to-br from-slate-50 via-blue-50 to-teal-50 p-8">
               <div className="max-w-7xl mx-auto">
-                <div className="text-center mb-12">
-                  <h1 className="text-4xl font-black text-slate-800 mb-4">Lake Cabins</h1>
-                  <p className="text-xl text-slate-600 mb-6">62 Points Max Score</p>
+                <div className="text-center mb-6">
+                  <h1 className="text-4xl font-black text-slate-800">Cabin Scorer</h1>
                 </div>
 
                 <button onClick={addCabin} className="w-full mb-6 py-4 bg-gradient-to-r from-teal-600 to-blue-600 text-white rounded-xl hover:from-teal-700 hover:to-blue-700 shadow-lg flex items-center justify-center gap-3 text-lg font-bold">
@@ -206,9 +205,9 @@
                   </div>
                 ) : (
                   <div className="mb-8 bg-gradient-to-br from-teal-600 to-blue-600 rounded-2xl shadow-2xl p-8 text-white">
-                    <h2 className="text-3xl font-bold mb-6 flex items-center gap-3">
+                    <h2 className="text-2xl font-bold mb-6 flex items-center gap-3">
                       <span className="text-4xl">🏡</span>
-                      Graded Cabins 
+                      62 Points Max 
                     </h2>
                     <div className="grid gap-4">
                       {cabins.map((cabin) => {
