--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
                   </div>
                 ) : (
                   <div className="mb-8 bg-gradient-to-br from-teal-600 to-blue-600 rounded-2xl shadow-2xl p-8 text-white">
-                    <h2 className="text-2xl mb-6 flex items-center gap-3">
-                      <span className="text-2xl">🏡</span>
-                      62 Points Max Score
-                    </h2>
+                    <h2 className="text-xl mb-6 flex items-center gap-3">
+                   <span className="text-4xl">🏡</span>
+                    62 Points Max Score 
+                     </h2>
                     <div className="grid gap-4">
                       {cabins.map((cabin) => {
                         const total = calculateTotal(cabin);
